# TestFrame

./: CMakeLists.txt  README.md  test_data.csv  test_data.json  test_data.xml  test_report.txt
Debug/: MyTestFramework.exe.recipe  MyTestFramework.ilk  MyTestFramework.vcxproj.FileListAbsolute.txt  sample_test.new.obj.enc  vc142.idb
Debug/MyTestFramework.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MyTestFramework.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/: mytest.h
include/mytest/: assert.h  console_color.h  data_loaders.h  database_fixture.h  fixture_template.h  mock.h  parameterized_test_params.h  test.h  test_case.h  test_suite.h  unit_test.h
src/: console_color.cpp  data_loaders.cpp  mock.cpp  parameterized_test_params.cpp  test.cpp  unit_test.cpp
tests/: sample_test.cpp  sample_test2.cpp
